# dummy5-ros-package

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/: dummy.cpp
