<?xml version="1.0"?>
<package format="2">

  <name>mrs_dummy5_package</name>
  <version>1.0.4</version>
  <description>The mrs_dummy5_package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_dummy4_package</depend>

</package>
